# rrstat

./: Cargo.toml  LICENSE  README.md  test_target  test_target.c
.github/workflows/: rust.yml
src/: aggregator.rs  cli.rs  collector.rs  lib.rs  main.rs  maps.rs  profiler.rs  report.rs  ringbuffer.rs  symbols.rs  types.rs
tests/: test.rs
