[package]
name = "rrstat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
perf-event = "0.4.8"
signal-hook = "0.3"
perf-event-open-sys = "4.0"
libc = "0.2"

addr2line = "0.21"
gimli = "0.28"
object = { version = "0.32", features = ["read"] }
memmap2 = "0.9"
